user-ms-tests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      role: user-ms
  template:
    metadata:
      labels:
        role: user-ms
    spec:
      containers:
      - name: user-ms
        image: stebancastro/user-ms-tesis:0.0.1-amd64
        readinessProbe:
          httpGet:
            path: /user-ms/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: user-ms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: user-ms

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
spec:
  replicas: 2
  selector:
    matchLabels:
      role: public-api
  template:
    metadata:
      labels:
        role: public-api
    spec:
      containers:
      - name: public-api
        image: stebancastro/public-api-tesis:0.0.1-amd64
        readinessProbe:
          httpGet:
            path: /public-api/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: public-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: public-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      role: integration-ms
  template:
    metadata:
      labels:
        role: integration-ms
    spec:
      containers:
      - name: integration-ms
        image: stebancastro/integration-ms-tesis:0.0.1-amd64
        readinessProbe:
          httpGet:
            path: /integration-ms/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: integration-ms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: integration-ms

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      role: runner-ms
  template:
    metadata:
      labels:
        role: runner-ms
    spec:
      containers:
      - name: runner-ms
        image: stebancastro/runner-ms-tesis:0.0.2-amd64
        readinessProbe:
          httpGet:
            path: /runner-ms/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: runner-ms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: runner-ms

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      role: query-ms
  template:
    metadata:
      labels:
        role: query-ms
    spec:
      containers:
      - name: query-ms
        image: stebancastro/query-ms-tesis:0.0.1-amd64
        readinessProbe:
          httpGet:
            path: /query-ms/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: query-ms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: query-ms

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-builder-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      role: query-builder-ms
  template:
    metadata:
      labels:
        role: query-builder-ms
    spec:
      containers:
      - name: query-ms
        image: stebancastro/query-builder-ms-tesis:0.0.1-amd64
        readinessProbe:
          httpGet:
            path: /query-builder-ms/health-check
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: query-builder-ms
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: query-builder-ms

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: stebancastro/frontend-tesis:0.0.3-amd64
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    role: frontend
