ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata: 
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
      - path: /public-api
        pathType: Prefix
        backend:
          service:
            name: public-api
            port:
              number: 8080
